<?xml version="1.0"?>
<package>
	<name>qualysis_tsv_parsers</name>
	<version>1.0.0</version>
	<description>The qualysis_tsv_parsers package publishes ROS sensor_msgs::PointCloud2 and TF transforms from a Qualisys motion capture tsv file with 3D/6D data</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>


	<buildtool_depend>catkin</buildtool_depend>


	<!-- ################################################################## -->
	<!-- Build dependencies -->
	<!-- ################################################################## -->

	<!-- other ros packages -->
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>


	<!-- ################################################################## -->
	<!-- Run dependencies -->
	<!-- ################################################################## -->

	<!-- other ros packages -->
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>
